--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -14,7 +14,7 @@
 <script src="~/Scripts/tippy/popper.min.js"></script>
 <script src="~/assets/sweetalert/sweetalert.js"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
-
+<link href="~/wwwroot/libs/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 <link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 
 <style>
@@ -364,8 +364,8 @@
         allOptions.appendTo("#cari");
     }
 
-  
-        $("#divPartial").show();
+
+    $("#divPartial").show();
 
 
     var type = 'fa'
@@ -546,6 +546,7 @@
 
 @Html.Partial("SaticiSiparisRaporuPartials/SiparisRaporu_Modal")
 @Html.Partial("SaticiSiparisRaporuPartials/SiparisRaporuBelgeList_Modal")
+@Html.Partial("SaticiSiparisRaporuPartials/SiparisRaporu_HazırListe")
 
 @*Birden Fazla Modal*@
 <script>
