--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -2,8 +2,6 @@
     string ProfilePhotoPath = Request.Cookies["Id"].Value + ".png";
 }
 
-<link href="~/assets/boxicons/css/boxicons.css" rel="stylesheet" />
-
 <style>
 
     :root {
@@ -428,6 +426,13 @@
                     <div class="module">
                         <div class="information">
                             <span class="fadable">Üretim Kaynak Planlama</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="menu-item" href="/Uretim/Izlenebilirlik" style="display: @ViewBag.DisplayIzlenebilirlik;">
+                    <div class="module">
+                        <div class="information">
+                            <span class="fadable">İzlenebilirlik</span>
                         </div>
                     </div>
                 </a>
