--- a/NOVA/Views/Uretim/Izlenebilirlik.cshtml
+++ b/NOVA/Views/Uretim/Izlenebilirlik.cshtml
@@ -1,6 +1,5 @@
 ﻿
 @{
-    ViewBag.Title = "LayoutDemo";
     Layout = "~/Views/Shared/Layout_Empty.cshtml";
 }
 
@@ -13,7 +12,7 @@
     <div class="row d-flex justify-content-start align-items-center gap-2">
         <div class="col-auto">
             <div class="nova-float-label nova-input-group">
-                <input id="BARCODE_NUMBER" type="text" placeholder="" maxlength="15">
+                <input id="BARCODE_NUMBER" type="text" placeholder="" maxlength="15" autocomplete="off">
                 <label>SERİ NO</label>
                 <div class="addon">
                     <button class="nove-primary-button icon-button" onclick="StartQRScanner(QRScan)">
@@ -66,7 +65,7 @@
                                 <span>MİKTAR 2</span>
                                 <span>:</span>
                             </td>
-                            <td  class="border-start-0">
+                            <td class="border-start-0">
                                 <span id="AMOUNT_2"></span>
                             </td>
                         </tr>
