--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -154,7 +154,7 @@
             }
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="~/wwwroot/libs/jquery/jquery.min.js"></script>
     <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 </head>
 
