--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -23,60 +23,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    
+
     <style>
-        @@media screen and (max-width: 600px) {
-            .marquee-w {
-                top: 30vh;
-                position: relative;
-                width: 100%;
-                height: 25px;
-                margin: 0 auto;
-                overflow: hidden;
-            }
-        }
-
-        .marquee {
-            position: absolute;
-            bottom: 2.5rem;
-            height: 22px;
-            width: 100%;
-            overflow: hidden;
-        }
-
-            .marquee div {
-                display: block;
-                width: 1000%;
-                height: 30px;
-                position: absolute;
-                overflow: hidden;
-                animation: marquee 120s linear infinite;
-            }
-
-                .marquee div:hover {
-                    -webkit-animation-play-state: paused;
-                    -moz-animation-play-state: paused;
-                    -o-animation-play-state: paused;
-                    animation-play-state: paused;
-                    cursor: pointer;
-                }
-
-            .marquee span {
-                margin-left: 1%;
-                float: left;
-                width: 50%;
-            }
-
-        @@keyframes marquee {
-            0% {
-                left: 100%;
-            }
-
-            100% {
-                left: -400%;
-            }
-        }
-
         :root {
             --empty-bg-color: #070B1C;
             --empty-text-color: #ffffff;
@@ -149,7 +97,31 @@
             display: none;
         }
 
+        #subtitle-wrapper {
+            height: 25px;
+            overflow: hidden;
+            white-space: nowrap;
+            position: absolute;
+            bottom: 2.4rem;
+            left: 0;
+            right: 0;
+        }
+
+        .subtitle-content {
+            display: flex;
+            align-items: center;
+            gap: 1.25rem;
+        }
+
+            .subtitle-content .machine-subtitle-data {
+                display: flex;
+                align-items: center;
+                height: 25px;
+                gap: 0.75rem;
+            }
+
         .footer {
+            height: 35px;
             padding: 0;
             text-align: center;
             position: absolute;
@@ -159,7 +131,6 @@
         }
 
             .footer span {
-                margin-top: -35px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -223,29 +194,16 @@
 
 </head>
 <body>
-    <div class="loader-area">
-        <img id="nova-loader" src="/assets/img/icons/brands/Nova.png" height="100" width="100" />
-    </div>
+
 
     <div class="main">
 
         @RenderBody()
 
-        <div class="marquee" onmouseover="this.stop();" onmouseout="this.start();">
-            <div>
-                <span id="SummaryData">
-                    <label id="AylikMiktarOzet"></label>
-                    <label id="AylikHurdaOzet"></label>
-                    <label id="AylikKalite2Ozet"></label>
-                    <label id="YillikMiktarOzet"></label>
-                    <label id="YillikHurdaOzet"></label>
-                    <label id="YillikKalite2Ozet"></label>
-                </span>
-            </div>
-        </div>
+        <div id="subtitle-wrapper"></div>
 
         <div class="footer">
-            <span>2023 &copy; designed by <img src="/assets/img/icons/brands/Nova.png" height="25" width="25" /> NOVA</span>
+            <span><img src="/assets/img/icons/brands/Nova.png" height="25" width="25" /> NOVA</span>
         </div>
     </div>
 
@@ -255,47 +213,85 @@
     <script src="https://unpkg.com/tippy.js@6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js" integrity="sha512-42PE0rd+wZ2hNXftlM78BSehIGzezNeQuzihiBCvUEB3CVxHvsShF86wBWwQORNxNINlBPuq7rG4WWhNiTVHFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="~/Scripts/sweetAlert.js"></script>
-    <script>
-        setInterval(function () {
-            $.ajax({
+    <script type="module">
+        import marquee from '/wwwroot/libs/vanilla-marquee/dist/vanilla-marquee.js';
 
-                url: 'http://192.168.2.13:83/api/makine/mes',
-                success: function (data) {
-                    if (data.length > 0) {
-                        var AylikMiktarBilgi = '<label class="ms-3">AYLIK ÜRETİM MİKTARI→ </label>';
-                        var AylikHurdaBilgi = '<label class="ms-3">AYLIK HURDA→ </label>';
-                        var AylikKalite2Bilgi = '<label class="ms-3">AYLIK 2. KALİTE→ </label>';
+        function CreateSubtitle() {
+            axios.get('http://192.168.2.13:83/api/makine/mes/sub')
+                .then((response) => {
+                    var Template = `<div class="subtitle-content">`;
 
-                        var YillikMiktarBilgi = '<label class="ms-3">YILLIK ÜRETİM MİKTAR→ </label>';
-                        var YillikHurdaBilgi = '<label class="ms-3">YILLIK HURDA→ </label>';
-                        var YillikKalite2Bilgi = '<label class="ms-3">YILLIK 2. KALİTE→ </label>';
+                    for (const Machine of response.data) {
+                        if (!Machine.HATKODU.toUpperCase().includes("SM"))
+                        {
+                            Template += `<div class="machine-subtitle-data">
+                                            <img src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" height="16" width="16">
+                                            <span><b>${Machine.HATKODU}</b> ❯</span>
+                                            <span style="color:#c7c7c7;">★ AYLIK→</span>
+                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-aylik-uretim">${MiktarFormat(Machine.AYLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
+                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-aylik-hurda">${MiktarFormat(Machine.AY_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.AY_TOPLAM_HURDA, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
+                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-aylik-ikinci-kalite">${MiktarFormat(Machine.AY_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.AY_TOPLAM_KALITE2, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
 
-                        data?.forEach((item) => {
-                            AylikMiktarBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AYLIK_TOPLAM_MIKTAR, 'KG')}`;
-                            AylikHurdaBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_HURDA, 'KG')}`;
-                            AylikKalite2Bilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_KALITE2, 'KG')}`;
-
-                            YillikMiktarBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YILLIK_TOPLAM_MIKTAR, 'KG')}`;
-                            YillikHurdaBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_HURDA, 'KG')}`;
-                            YillikKalite2Bilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_KALITE2, 'KG')}`;
-                        });
-
-                        $('#AylikMiktarOzet').html(AylikMiktarBilgi + '<label class="ms-3">•</label>');
-                        $('#AylikHurdaOzet').html(AylikHurdaBilgi + '<label class="ms-3">•</label>');
-                        $('#AylikKalite2Ozet').html(AylikKalite2Bilgi + '<label class="ms-3">•</label>');
-
-                        $('#YillikMiktarOzet').html(YillikMiktarBilgi + '<label class="ms-3">•</label>');
-                        $('#YillikHurdaOzet').html(YillikHurdaBilgi + '<label class="ms-3">•</label>');
-                        $('#YillikKalite2Ozet').html(YillikKalite2Bilgi + '<label class="ms-3">•</label>');
+                                            <span style="color:#c7c7c7;">★ YILLIK→</span>
+                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-yillik-uretim">${MiktarFormat(Machine.YILLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
+                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-yillik-hurda">${MiktarFormat(Machine.YIL_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_HURDA, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
+                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-yillik-ikinci-kalite">${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
+                                          </div>`;
+                        }
                     }
-                }
-            });
-        }, 1000);
 
+                    $('#subtitle-wrapper').html(Template + `</div>`);
+
+                    new marquee(document.getElementById('subtitle-wrapper'), {
+                        duplicated: true,
+                        gap: 16,
+                        speed: 50,
+                        pauseOnHover: true
+                    });
+
+                    setInterval(BilgiGuncelle, 1000);
+                })
+                .catch((ex) => {
+
+                });
+        }
 
         function MiktarFormat(Value, Unit = '') {
             return (Value !== null && Value !== 0) ? `${parseFloat(Value).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 0 })} ${Unit}` : '-';
         }
+
+        function OranFormat(Pay, Payda) {
+            return RoundUp(Pay / Payda) == '0.00' || isNaN(parseFloat(Pay / Payda)) ? '-%' : `${RoundUp(Pay / Payda)} %`;
+        }
+
+        function RoundUp(v, n = 2) {
+            return (Math.ceil(v * Math.pow(10, n)) / Math.pow(10, n)).toFixed(2);
+        }
+
+        function BilgiGuncelle()
+        {
+            axios.get('http://192.168.2.13:83/api/makine/mes/sub')
+                .then((response) => {
+
+                    for (const Machine of response.data)
+                    {
+                        $(`#${Machine.HATKODU}-aylik-uretim`).html(MiktarFormat(Machine.AYLIK_TOPLAM_MIKTAR, 'KG'));
+                        $(`#${Machine.HATKODU}-aylik-hurda`).html(`${MiktarFormat(Machine.AY_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.AY_TOPLAM_HURDA, Machine.AYLIK_TOPLAM_MIKTAR)})`);
+                        $(`#${Machine.HATKODU}-aylik-ikinci-kalite`).html(`${MiktarFormat(Machine.AY_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.AY_TOPLAM_KALITE2, Machine.AYLIK_TOPLAM_MIKTAR)})`);
+
+                        $(`#${Machine.HATKODU}-yillik-uretim`).html(MiktarFormat(Machine.YILLIK_TOPLAM_MIKTAR, 'KG'));
+                        $(`#${Machine.HATKODU}-yillik-hurda`).html(`${MiktarFormat(Machine.YIL_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_HURDA, Machine.YILLIK_TOPLAM_MIKTAR)})`);
+                        $(`#${Machine.HATKODU}-yillik-ikinci-kalite`).html(`${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2,Machine.YILLIK_TOPLAM_MIKTAR)})`);
+                    }
+                })
+                .catch((ex) => {
+
+                });
+        }
+
+        $(document).ready(() => {
+            CreateSubtitle();
+        });
     </script>
 
     @RenderSection("Scripts", false)
