--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -9,15 +9,14 @@
     <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <link href="\assets\boxicons\css\animations.css" rel="stylesheet" type="text/css" />
-    <link href="\assets\boxicons\css\transformations.css" rel="stylesheet" type="text/css" />
+    <script src="~/wwwroot/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+   
+    <link href="~/wwwroot/libs/boxicons/css/boxicons.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
     @*<link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
-    <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />*@
+        <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />*@
     <link href="~/Scripts/floating-labels.min.css" rel="stylesheet" />
     <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link href="~/Scripts/select2.css" rel="stylesheet" />
