--- a/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
+++ b/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
@@ -202,12 +202,13 @@
 
         Arr.forEach(function (a) {
             if (!this[a.STOK_KODU]) {
-                this[a.STOK_KODU] = { STOK_ADI: a.STOK_ADI, STOK_KODU: a.STOK_KODU, MIKTAR: 0 };
+                this[a.STOK_KODU] = { STOK_ADI: a.STOK_ADI, STOK_KODU: a.STOK_KODU, MIKTAR: 0,MIKTAR2:0 };
 
                 Result.push(this[a.STOK_KODU]);
             }
 
             this[a.STOK_KODU].MIKTAR += parseInt(a.MIKTAR);
+            this[a.STOK_KODU].MIKTAR2 += parseInt(a.MIKTAR2);
 
         }, Object.create(null));
 
@@ -344,7 +345,7 @@
         for (var i = 0; i < SelectedValues.length; i++)
         {
             var FilteredData = Data.filter(x => x.SERI_NO == SelectedValues[i])[0];
-            var SelectedData = { "TIP": Type, "HAT_KODU": FilteredData.HAT_KODU, "STOK_KODU": FilteredData.STOK_KODU, "SERI_NO": FilteredData.SERI_NO, "MIKTAR": FilteredData.MIKTAR };
+            var SelectedData = { "TIP": Type, "HAT_KODU": FilteredData.HAT_KODU, "STOK_KODU": FilteredData.STOK_KODU, "SERI_NO": FilteredData.SERI_NO, "MIKTAR": FilteredData.MIKTAR, "MIKTAR2": FilteredData.MIKTAR2 };
 
             DataForSend.push(SelectedData);
         }
