--- a/NOVA/Views/Uretim/Partials/MES/Islem/IslemTablosu.cshtml
+++ b/NOVA/Views/Uretim/Partials/MES/Islem/IslemTablosu.cshtml
@@ -15,8 +15,17 @@
         border-right: transparent !important;
         color: white;
     }
+    
     .th-inner {
         color: white;
+    }
+    .search-input {
+        border: var(--bs-border-width) solid var(--empty-border-color);
+    }
+    input[type="radio"]:checked + label {
+        background-color: #112473 !important;
+        color: white;
+        transform: scale(1.05)
     }
     #ISLEM .bootstrap-table .fixed-table-container.fixed-height:not(.has-footer) {
         border-bottom: var(--bs-border-width) solid var(--empty-border-color) !important;
@@ -88,59 +97,67 @@
                 border-bottom: 0;
             }
 </style>
-<div id="ISLEM" class="machine shadow" style="display: none; width: 100% !important;min-height:50vh">
+<div id="ISLEM" class="machine shadow" style="display: none; width: 100% !important;min-height:45vh">
     
     <div class="machine-title"><label style="border: var(--bs-btn-border-width) solid var(--empty-border-color) !important; " id="guncellemeTarihi"></label></div>
 
     <hr class="horizontal-line" />
     <div class="machine-content">
         <div class="row mt-2" style="max-width:100vw">
-            <div class="col-12 d-flex justify-content-center align-items-center makineler w-100 p-1">
+            <div class="col-12 makineler w-100 p-1">
                 <div id="UretimeGirenlerMakine" style="width: 95vw;"></div>
             </div>
         </div>
       
-        <div class="row mt-1" style="max-width:100vw">
-            <div class="col-12 d-flex justify-content-center align-items-center makineler p-1">
+        <div class="row mt-1" style="max-width: 100vw;margin-left: 0.8rem;">
+            <div class="col-12 makineler p-1">
                 <div id="toolbar">
-                    <button type="button" id="IslemBtn" onclick="showIslemModal()" class="btn btn-warning" style="display: none; justify-content: start; align-items: center">İşlem</button>
-                </div>
-                <div id="UretimeGirenlerTablo" style="width: 95vw;display:none">
+                    <div style="display:flex;justify-content:center;align-items:center">
+                        
+                            <button type="button" id="IslemBtn" onclick="showIslemModal()" class="btn btn-warning" style="display: none; justify-content: start; align-items: center">İşlem</button>
 
-                    <table id="UretimeGirenlerTable"
-                           class="table"
-                           data-search="true"
-                           data-toolbar="#toolbar"
-                           data-show-refresh="false"
-                           data-show-toggle="false"
-                           data-show-fullscreen="false"
-                           data-show-columns="false"
-                           data-show-columns-toggle-all="false"
-                           data-detail-view="false"
-                           data-detail-view-by-click="false"
-                           data-show-export="false"
-                           data-click-to-select="true"
-                           data-show-pagination-switch="false"
-                           data-pagination="false"
-                           data-show-footer="false"
-                           data-mobile-responsive="true"
-                           data-locale="tr-TR"
-                           data-height="500"
-                           data-sticky-header="false">
-                        <thead>
-                            <tr>
-                                <th data-field="" data-halign="center" data-width="50" data-align="center" data-formatter="checkboxFormatter">-</th>
-                                <th data-field="SERI_NO" data-halign="center" data-width="100" data-align="center">BARKOD NO</th>
-                                <th data-formatter="UnitFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">MİKTAR</th>
-                                <th data-formatter="UnitFormatter" data-field="URETILEN" data-halign="center" data-align="center">ÜRETİLEN</th>
-                                <th data-formatter="UnitFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">KALAN MİKTAR</th>
-                                <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">TÜKETİM</th>
-                            </tr>
-                        </thead>
-                    </table>
+                            <label id="toplamMik" style="display:none;margin-left:0.5rem"></label>
+                       
+                    </div>
+                       
+                    </div>
+                    <div id="UretimeGirenlerTablo" style="width: 95vw;display:none">
 
+                        <table id="UretimeGirenlerTable"
+                               class="table"
+                               data-search="true"
+                               data-toolbar="#toolbar"
+                               data-show-refresh="false"
+                               data-show-toggle="false"
+                               data-show-fullscreen="false"
+                               data-show-columns="false"
+                               data-show-columns-toggle-all="false"
+                               data-detail-view="false"
+                               data-detail-view-by-click="false"
+                               data-show-export="false"
+                               data-click-to-select="true"
+                               data-show-pagination-switch="false"
+                               data-pagination="false"
+                               data-show-footer="false"
+                               data-mobile-responsive="true"
+                               data-locale="tr-TR"
+                               data-height="650"
+                               data-sticky-header="false">
+                            <thead>
+                                <tr>
+                                    <th data-field="" data-halign="center" data-width="50" data-align="center" data-formatter="checkboxFormatter">-</th>
+                                    <th data-field="SERI_NO" data-halign="center" data-width="100" data-align="center">BARKOD NO</th>
+                                    <th data-formatter="UnitFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">MİKTAR</th>
+                                    <th data-formatter="UnitFormatter" data-field="URETILEN" data-halign="center" data-align="center">ÜRETİLEN</th>
+                                    <th data-formatter="UnitFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">KALAN MİKTAR</th>
+                                    <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">TÜKETİM</th>
+                                    <th data-formatter="iFormatter" data-field="" data-halign="center" data-align="center">İŞLEM</th>
+                                </tr>
+                            </thead>
+                        </table>
+
+                    </div>
                 </div>
-            </div>
         </div>
 
     </div>
@@ -155,7 +172,7 @@
             for (var i = 0; i < data.length; i++) {
                 
 
-                Makineler += `<input type="radio" class="btn-check" name="makine-ieAL" id="${data[i].HAT_KODU}btn" onclick="Uretim('${data[i].HAT_KODU}')" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" style="color:white" for="${data[i].HAT_KODU}btn">${data[i].HAT_KODU}</label>`;
+                Makineler += `<input type="radio" class="btn-check" name="makine-ieAL" id="${data[i].HAT_KODU}btn" onclick="Uretim('${data[i].HAT_KODU}')" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-makineler" style="background-color:var(--empty-bg-color);border-color: var(--empty-border-color);color:white" for="${data[i].HAT_KODU}btn">${data[i].HAT_KODU}</label>`;
                 
             }
 
