--- a/NOVA/wwwroot/css/BarcodeTrackTree.css
+++ b/NOVA/wwwroot/css/BarcodeTrackTree.css
@@ -7,147 +7,137 @@
     overflow: hidden;
 }
 
-
-
 /* Forked from https://codepen.io/Pestov/pen/BLpgm */
-ol, ul, li {
-    margin: 0;
+
+.tree ul, ol, li {
+    list-style: none;
     padding: 0;
+    margin: 0;
 }
 
-.tree {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.tree ul {
     display: flex;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: start;
+    gap: 40px;
+    position: relative;
 }
 
-    .tree ul {
-        padding-right: 20px;
-        position: relative;
-        direction: rtl;
-        transition: all 0.5s;
-        -webkit-transition: all 0.5s;
-        -moz-transition: all 0.5s;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-    }
+.tree li {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 40px;
+    position: relative;
+}
 
-    .tree li {
-        text-align: center;
-        list-style-type: none;
-        position: relative;
-        padding: 5px 20px 5px 0;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        transition: all 0.5s;
-        -webkit-transition: all 0.5s;
-        -moz-transition: all 0.5s;
-    }
+.tree .nodes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 0.5rem;
+    border: 2px solid #bebebe;
+    background-color: #f8f8f8;
+    border-radius: 0.375rem;
+    gap: 20px;
+    transition: all 0.23s ease-in-out;
+}
 
-        .tree li::before, .tree li::after {
-            content: '';
-            position: absolute;
-            right: 0;
-            bottom: 50%;
-            border-right: 1px solid #ccc;
-            width: 20px;
-            height: 50%;
-        }
-
-        .tree li::after {
-            bottom: auto;
-            top: 50%;
-            border-top: 1px solid #ccc;
-        }
-
-        .tree li:only-child::after, .tree li:only-child::before {
-            display: none;
-        }
-
-        .tree li:only-child {
-            padding-left: 0;
-        }
-
-        .tree li:only-child {
-            padding: 0;
-        }
-
-        .tree li:first-child::before, .tree li:last-child::after {
-            border: 0 none;
-        }
-
-        .tree li:last-child::before {
-            border-bottom: 1px solid #ccc;
-        }
-
-        .tree li:first-child::after {
-            border-radius: 0 0 0 0;
-            -webkit-border-radius: 0 0 0 0;
-            -moz-border-radius: 0 0 0 0;
-        }
-
-    .tree ul ul::before {
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 50%;
-        border-top: 1px solid #ccc;
-        width: 20px;
-        height: 0;
-    }
-
-    .tree li .node {
-        border: 1px solid #ccc;
-        padding: 10px 5px;
-        text-decoration: none;
+    .tree .nodes .node {
+        background-color: #dfe4f57a;
+        padding: 0.5rem;
+        border-radius: 0.1825rem;
         cursor: pointer;
-        color: #666;
-        display: inline-block;
-        -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        transition: all 0.5s;
-        -webkit-transition: all 0.5s;
-        -moz-transition: all 0.5s;
+        transition: all 0.23s ease-in-out;
     }
 
-        .tree li .node:hover, .tree li .node:hover + ul li .node {
-            background: #c8e4f8;
-            color: #000;
-            border: 1px solid #94a0b4;
-        }
+    .tree .nodes:hover,
+    .tree .nodes:hover::after,
+    .tree .nodes:hover ~ ul li .nodes,
+    .tree .nodes:hover ~ ul li .nodes::after,
+    .tree .nodes:hover ~ ul li .nodes::before,
+    .tree .nodes:hover ~ ul li::after,
+    .tree .nodes:hover ~ ul li::before {
+        border-color: #7c89ff !important;
+    }
 
-            .tree li .node:hover + ul li::after,
-            .tree li .node:hover + ul li::before,
-            .tree li .node:hover + ul::before,
-            .tree li .node:hover + ul ul::before {
-                border-color: #94a0b4;
-            }
+    .tree .nodes .node:hover {
+        background-color: #dfe4f5;
+    }
 
-        .tree li .node.hover, .tree li .node.hover + ul li .node {
-            background: #c8e4f8;
-            color: #000;
-            border: 1px solid #94a0b4;
-        }
+    /* Connections */
 
-            .tree li .node.hover + ul li::after,
-            .tree li .node.hover + ul li::before,
-            .tree li .node.hover + ul::before,
-            .tree li .node.hover + ul ul::before {
-                border-color: #94a0b4;
-            }
+    .tree .nodes::after {
+        content: "";
+        position: absolute;
+        bottom: -21px;
+        border: 1px solid #bebebe;
+        height: 21px;
+        z-index: -1;
+    }
+
+    .tree .nodes::before {
+        content: "";
+        position: absolute;
+        top: -24px;
+        border: 1px solid #bebebe;
+        height: 23px;
+        z-index: -1;
+    }
+
+    .tree .nodes.root::before {
+        display: none;
+    }
+
+    .tree .nodes:only-child::after {
+        display: none;
+    }
+
+.tree ul:first-of-type li:not(:only-child):first-child::after {
+    content: "";
+    position: absolute;
+    top: -22px;
+    left: 50%;
+    width: 65%;
+    border: 1px solid #bebebe;
+    z-index: -1;
+}
+
+.tree ul:first-of-type li:not(:only-child):last-child::before {
+    content: "";
+    position: absolute;
+    top: -22px;
+    right: 50%;
+    width: 65%;
+    border: 1px solid #bebebe;
+    z-index: -1;
+}
+
+.tree ul:first-of-type li:not(:first-child):not(:last-child)::after {
+    content: "";
+    position: absolute;
+    top: -22px;
+    right: 50%;
+    width: 65%;
+    border: 1px solid #bebebe;
+    z-index: -1;
+}
+
+.tree ul:first-of-type li:not(:first-child):not(:last-child)::before {
+    content: "";
+    position: absolute;
+    top: -22px;
+    left: 50%;
+    width: 65%;
+    border: 1px solid #bebebe;
+    z-index: -1;
+}
+
+.barcode-detail-table .info{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    font-weight: 600;
+}
