--- a/NOVA/Views/Uretim/MES.cshtml
+++ b/NOVA/Views/Uretim/MES.cshtml
@@ -569,7 +569,7 @@
       animation: 'fade',
  });
         SetSummaryView();
-
+        SetSoundButton();
     });
 
     $('#HomeButton').on("mousedown mouseup click focus blur", function (e) {
